Update TLS env vars

--- a/.env
+++ b/.env
@@ -18,10 +18,9 @@ SMTP_HOST=smtp.sendgrid.net
 SMTP_FROM=noreply@zone
 SMTP_FROM_NAME=me
 SMTP_PORT=465
-SMTP_SSL=false
 SMTP_USERNAME=apikey
 SMTP_PASSWORD=
-SMTP_EXPLICIT_TLS=true
+SMTP_SECURITY=force
 
 
 ### BITWARDEN VARIABLES ###
