--- a/.env
+++ b/.env
@@ -11,16 +11,15 @@ TZ=UTC
 
 # SMTP settings for Bitwarden and fail2ban
 # Uncomment and fill in details if you want to use e-mail invitations from bitwarden and e-mail alerts with fail2ban
-# SMTP_EXPLICIT_TLS (SMTP_SECURE_SMTP in the admin ui) and SMTP_SSL should be either blank for defualt, true, or false
-# (see https://github.com/dani-garcia/vaultwarden/issues/1712)
 
 SMTP_HOST=smtp.sendgrid.net
 SMTP_FROM=noreply@zone
 SMTP_FROM_NAME=me
-SMTP_PORT=465
+SMTP_PORT=587
 SMTP_USERNAME=apikey
 SMTP_PASSWORD=
-SMTP_SECURITY=force
+SMTP_SECURITY=starttls
+SMTP_AUTH_MECHANISM=Login
 
 
 ### BITWARDEN VARIABLES ###
