--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
     - SMTP_SECURITY
     - SMTP_USERNAME
     - SMTP_PASSWORD
+    - SMTP_AUTH_MECHANISM
     - YUBICO_CLIENT_ID
     - YUBICO_SECRET_KEY
     - YUBICO_SERVER
