--- a/.env
+++ b/.env
@@ -19,8 +19,8 @@ SMTP_PORT=587
 SMTP_USERNAME=apikey
 SMTP_PASSWORD=
 SMTP_SECURITY=starttls
-SMTP_AUTH_MECHANISM=Login
-
+# For fail2ban, YES or NO
+SMTP_TLS=YES
 
 ### BITWARDEN VARIABLES ###
 
