Update ddclient.conf template

--- a/ddns/ddclient.conf
+++ b/ddns/ddclient.conf
@@ -3,7 +3,7 @@ syslog=yes                              # log update msgs to syslog
 pid=/var/run/ddclient/ddclient.pid      # record PID in file.
 ssl=yes
 
-use=web, web=icanhazip.com
+use=web, web=checkip.dyndns.org, web-skip='IP Address' # found after IP Address
 protocol=cloudflare
 zone=zone
 ttl=0
