--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ SMTP_USERNAME=apikey
 SMTP_PASSWORD=
 SMTP_SECURITY=starttls
 # For fail2ban, YES or NO
-SMTP_TLS=NO
+SMTP_TLS=YES
 
 ### BITWARDEN VARIABLES ###
 
