--- a/.env
+++ b/.env
@@ -18,8 +18,12 @@ SMTP_PORT=587
 SMTP_USERNAME=apikey
 SMTP_PASSWORD=
 SMTP_SECURITY=starttls
-# For fail2ban, YES or NO
+# fail2ban-specific SMTP settings
+# Use TLS to talk to the SMTP server (YES or NO, default NO)
 SMTP_TLS=YES
+# Specify whether ssmtp does a EHLO/STARTTLS before starting SSL negotiation (YES or NO, default NO)
+# Should probably be YES if SMTP_SECURITY=starttls above
+SSMTP_STARTTLS=YES
 
 ### BITWARDEN VARIABLES ###
 
