Use Google's metadata service for ddclient

--- a/ddns/ddclient.conf
+++ b/ddns/ddclient.conf
@@ -3,7 +3,7 @@ syslog=yes                              # log update msgs to syslog
 pid=/var/run/ddclient/ddclient.pid      # record PID in file.
 ssl=yes
 
-use=web, web=checkip.dyndns.org, web-skip='IP Address' # found after IP Address
+use=cmd  cmd='curl -s -H "Metadata-Flavor:Google" http://metadata/computeMetadata/v1/instance/network-interfaces/0/access-configs/0/external-ip'
 protocol=cloudflare
 zone=zone
 ttl=0
