Fix env var's name

--- a/.env
+++ b/.env
@@ -23,7 +23,7 @@ SMTP_SECURITY=starttls
 SMTP_TLS=YES
 # Specify whether ssmtp does a EHLO/STARTTLS before starting SSL negotiation (YES or NO, default NO)
 # Should probably be YES if SMTP_SECURITY=starttls above
-SSMTP_STARTTLS=YES
+SMTP_STARTTLS=YES
 
 ### BITWARDEN VARIABLES ###
 
