--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,11 +1,20 @@
 https://{$DOMAIN}:443 {
-	# Caddy on port 443 in container to vaultwarden private instance 
-	# Use it if Caddy exposed to the net 
+	# Caddy on port 443 in container to vaultwarden private instance
+	# Use it if Caddy exposed to the net
 	# Doc about automatic HTTPS https://caddyserver.com/docs/automatic-https
 
 	log {
-		output stderr
+		output stdout
 		level INFO
+		format filter {
+			wrap console {
+				time_format rfc3339
+			}
+			fields {
+				request>tls delete
+				resp_headers delete
+			}
+		}
 	}
 
 	tls {
