Switch to mailgun

--- a/.env
+++ b/.env
@@ -12,18 +12,18 @@ TZ=UTC
 # SMTP settings for Bitwarden and fail2ban
 # Uncomment and fill in details if you want to use e-mail invitations from bitwarden and e-mail alerts with fail2ban
 
-SMTP_HOST=smtp.sendgrid.net
+SMTP_HOST=smtp.mailgun.org
 SMTP_FROM=noreply@zone
 SMTP_PORT=587
-SMTP_USERNAME=apikey
+SMTP_USERNAME=
 SMTP_PASSWORD=
 SMTP_SECURITY=starttls
 # fail2ban-specific SMTP settings
 # Use TLS to talk to the SMTP server (YES or NO, default NO)
-SMTP_TLS=YES
+SMTP_TLS=on
 # Specify whether ssmtp does a EHLO/STARTTLS before starting SSL negotiation (YES or NO, default NO)
 # Should probably be YES if SMTP_SECURITY=starttls above
-SMTP_STARTTLS=YES
+SMTP_STARTTLS=on
 
 ### BITWARDEN VARIABLES ###
 
